# sandbox

./: .gitmodules  .markdownlint-cli2.jsonc  Makefile  README.md
.github/: labeler.yml  renovate.json  renovate.json5
.github/workflows/: auto-delete-cache.yml  check-pip-dependency.yml  close-stale-issues.yml  codeql.yml  go-lint.yml  issue-validator.yml  lint-go.yml  lint-python.yml  markdown-lint.yml  metrics-multi-repo.yml  metrics.yml  node-test.yml  only-readme-validator.yml  python-dependency-check.yml  python-lint.yml  ruby-lint.yml  ruby-test.yml  super-linter.yml
docs/: misc.md
go/: go.mod
go/docker-handson/: Dockerfile  go.mod
k8s/hello-container/: Dockerfile  main.go
k8s/hello-helm-chart/: values.yaml
k8s/hello-helm-chart/templates/: configmap.yml  deployment.yaml  hpa.yaml
k8s/hello-manifest/: deployment.yml  mongo.yml  pod.yml  pvc.yml
lisp/hello-world/: hello.lisp  sample1.lisp  sample2.lisp  sample3.lisp  sample4.lisp  sample5.lisp
misc/: quine.md  setup-ns3-environment.md
node/ci-dependency/: .gitignore  package-lock.json  package.json  server.js  server.test.js
python/gpt-codegen/: .gitignore  README.md  main.py  prompt.txt  requirements.txt  sample.py
python/gpt-codegen/results/sample/: README.txt  sample1.py  sample2.py  sample3.py
python/rye-tutorial/: Makefile  README.md  pyproject.toml  setup.cfg
python/rye-tutorial/src/: main.py
python/rye-tutorial/src/rye_tutorial/: __init__.py
python/softeng/: Makefile  README.md  pyproject.toml
python/softeng/src/softeng/: __init__.py
ruby/ci-sample/: .rubocop.yml  Gemfile  README.md  Rakefile
ruby/ci-sample/lib/: client.rb  server.rb
ruby/ci-sample/spec/: server_spec.rb  spec_helper.rb
ts/typescript-book/getting-started/: increment.js  increment.ts
ts/typescript-book/jest-tutorial/: package.json
ts/typescript-book/like-button/: package.json
ts/typescript-book/like-button/src/: App.tsx
ts/typescript-book/random-cat/: README.md  package.json
ts/typescript-book/random-cat/pages/: index.tsx
typescript/typescript-book/: README.md
typescript/typescript-book/jest-tutorial/: isZero.test.ts  isZero.ts
typescript/typescript-book/like-button/: .gitignore  package.json
typescript/typescript-book/like-button/src/: App.tsx
typescript/typescript-book/random-cat/: package.json
