[project]
name = "rye-tutorial"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Junya Okabe", email = "okabe.junya.qj@alumni.tsukuba.ac.jp" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
