[project]
name = "rye-tutorial"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "Junya Okabe", email = "okabe.junya.qj@alumni.tsukuba.ac.jp" }
]
dependencies = ["flask~=2.3.2", "black~=23.7.0", "flake8~=6.1.0", "mypy~=1.4.0", "isort~=5.12.0"]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true
