[project]
authors = [
  {name = "Junya Okabe", email = "okabe.junya.qj@alumni.tsukuba.ac.jp"},
]
dependencies = ["black~=24.8.0", "flake8~=7.1.0", "mypy~=1.11.0", "isort~=5.13.0", "pytest~=8.3.1"]
description = "Add a short description here"
name = "softeng"
readme = "README.md"
requires-python = ">= 3.8"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.rye]
managed = true
[tool.hatch.metadata]
allow-direct-references = true

[tool.flake8]
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
'''
max-line-length = 119


[tool.black]
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
      | _build
      | buck-out
      | build
      | dist
    )/
'''
line-length = 119

[tool.isort]
force_single_line = true
line_length = 119
multi_line_output = 3

[tool.mypy]
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
